# text-recognition

./: .gitignore  README.md  pyproject.toml
configs/: vit_config.yaml
docs/: vit_transformer_architecture.md
scripts/: download_data.py  train.py
src/: __init__.py  metrics.py  utils.py
src/data/: datamodule.py  dataset.py  tokenizer.py  transforms.py
src/engine/: __init__.py  trainer.py
src/models/: ocr_model.py  transformer_decoder.py  vit_encoder.py
